# xfuse

./: .cirrus.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  meson.build  rustfmt.toml
.github/workflows/: ci.yml
benches/: read-amplification.rs
c-src/: meson.build
doc/: xfs-fuse.1
header/: xfuse_endianess.h  xfuse_sb.h  xfuse_types.h  xfuse_volume.h
header/xfuse/: xfuse_def.h  xfuse_dir.h  xfuse_dir_sf.h  xfuse_end.h  xfuse_ino.h  xfuse_sb.h  xfuse_vol.h
libxfuse/: meson.build  xfuse_dir.c  xfuse_dir_sf.c  xfuse_ino.c  xfuse_sb.c  xfuse_vol.c
resources/: xfs.img.zst  xfs4096.img.zst  xfs_4kn.img.zst  xfs_noftype.img.zst  xfs_preallocated.img.zst  xfs_rt1.img.zst  xfs_rt2.img.zst  xfs_xattr_v1.img.zst  xfsv4.img.zst
scripts/: coverage.sh  gen_attr_dump.py  mkimg.sh
src/: main.rs  meson.build  playground.c  xfuse.c  xfuse_sb.c  xfuse_volume.c
src/compat/: mod.rs
src/libxfuse/: agi.rs  attr.rs  attr_bptree.rs  attr_leaf.rs  attr_node.rs  attr_shortform.rs  block_reader.rs  bmbt_rec.rs  btree.rs  da_btree.rs  definitions.rs  dinode.rs  dinode_core.rs  dir2.rs  dir2_block.rs  dir2_sf.rs  dir3.rs  dir3_block.rs  dir3_bptree.rs  dir3_leaf.rs  dir3_lf.rs  dir3_node.rs  dir3_sf.rs  file.rs  file_btree.rs  file_extent_list.rs  mod.rs  sb.rs  symlink_extent.rs  utils.rs  volume.rs
tests/: integration.rs  util.rs
