[package]
name = "xfs-fuse"
description = "Read-only FUSE server implementing XFS"
version = "0.1.0"
edition = "2018"
authors = ["Khaled Emara <mail@khaledemara.dev>"]
repository = "https://github.com/KhaledEmaraDev/xfuse"
categories = ["filesystem"]
exclude = [
  "/.gitignore",
  "/.cirrus.yml"
]

[dependencies]
fuser = "0.13.0"
byteorder = "1.4.3"
libc = "0.2.97"
uuid = "0.8.2"
num-traits = "0.2.14"
num-derive = "0.3.3"
crc = "2.0.0"
tracing = "0.1.37"

[dependencies.clap]
version = "4"
default-features = false
features=  [ "cargo", "color", "derive", "std", "suggestions", "wrap_help" ,"usage"]

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = [ "ansi", "env-filter", "fmt", "tracing-log" ]
