[package]
name = "xfs-fuse"
description = "Read-only FUSE server implementing XFS"
version = "0.1.0"
edition = "2018"
authors = ["Khaled Emara <mail@khaledemara.dev>"]
repository = "https://github.com/KhaledEmaraDev/xfuse"
categories = ["filesystem"]
exclude = [
  "/.gitignore",
  "/.cirrus.yml"
]

[dependencies]
bincode = {version = "2.0.0-rc.3", default-features = false, features = ["derive", "std"]}
byteorder = "1.4.3"
crc = "2.0.0"
fuser = "0.13.0"
libc = "0.2.97"
num-derive = "0.3.3"
num-traits = "0.2.14"
tracing = "0.1.37"
uuid = "0.8.2"

[dependencies.clap]
version = "4"
default-features = false
features=  [ "cargo", "color", "derive", "std", "suggestions", "wrap_help" ,"usage"]

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = [ "ansi", "env-filter", "fmt", "tracing-log" ]

[dev-dependencies]
assert_cmd = "2.0"
function_name = "0.3.0"
lazy_static = "1.4.0"
rstest = "0.16.0"
rstest_reuse = "0.6.0"
nix = { version = "0.27.0", features = [ "fs", "user" ] }
sysctl = "0.5"
tempfile = "3.0"
