[package]
name = "xfs-fuse"
description = "Read-only FUSE server implementing XFS"
version = "0.4.3"
edition = "2021"
rust-version = "1.74"
authors = ["Khaled Emara <mail@khaledemara.dev>"]
repository = "https://github.com/KhaledEmaraDev/xfuse"
license = "BSD-2-Clause"
categories = ["filesystem"]
keywords = ["xfs", "fuse", "filesystem"]
exclude = [
  "/.gitignore",
  "/.cirrus.yml",
  "/resources",
  "/scripts",
  "/tests"
]

[dependencies]
bincode = {version = "2.0.0-rc.3", default-features = false, features = ["derive", "std"]}
bitflags = "2.4"
byteorder = "1.4.3"
cfg-if = "1.0"
crc = "2.0.0"
enum_dispatch = "0.3.12"
fuser = { version = "0.13.0", features = ["abi-7-31"] }
libc = "0.2.97"
nix = { version = "0.27.0", features = [ "ioctl" ] }
num-derive = "0.4.2"
num-traits = "0.2.14"
tracing = "0.1.37"
uuid = "1.0"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[bench]]
name = "read-amplification"
path = "benches/read-amplification.rs"
harness = false

[dependencies.clap]
version = "4"
default-features = false
features=  [ "cargo", "color", "derive", "std", "suggestions", "wrap_help" ,"usage"]

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = [ "ansi", "env-filter", "fmt", "tracing-log" ]

[dev-dependencies]
assert_cmd = "2.0"
function_name = "0.3.0"
lazy_static = "1.4.0"
mdconfig = "0.2.0"
rstest = "0.19.0"
rstest_reuse = "0.6.0"
nix = { version = "0.27.0", features = [ "dir", "fs", "user" ] }
sysctl = "0.5"
tempfile = "3.0"
walkdir = "2.0"
xattr = "1.0"
